Int Homepage Exp - fix bottom spacing and bg on XXL displays

--- a/scss/templates/international-home/experiences.scss
+++ b/scss/templates/international-home/experiences.scss
@@ -3,12 +3,12 @@
 // =============================================================================
 
 section.experiences {
-  background-size: contain;
+  background-size: 100%;
   background-color: $tertiary;
   background-position: right bottom;
   background-image: url('https://images.prismic.io/ucriverside/628f0a5b-a4e5-47fa-a6f5-a93969bd35ed_lady-walking.jpg?auto=compress,format');
 
   @include media-breakpoint-up(lg) {
-    padding-bottom: rem-calc(300);
+    padding-bottom: 16rem;
   }
 }
